public interface Almacenamiento {
    
    public void guardar(String dato);
    public String recuperar();
}
